# FundVerse

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/FundVerse_backend/: Cargo.toml  FundVerse_backend.did
src/FundVerse_backend/src/: FundVerse_backend.did  lib.rs
src/FundVerse_frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/FundVerse_frontend/src/: App.jsx  App.tsx  index.css  index.html  index.js  main.tsx
src/FundVerse_frontend/src/components/: CampaignCard.tsx  ContributionDialog.tsx  CreateProjectDialog.tsx  Dashboard.tsx
src/FundVerse_frontend/src/lib/: ic.ts  utils.ts
src/Fund_Flow/src/: Fund_Flow.did  lib.rs
